2000-01-15  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (chainloader_func): If --force is specified
	in ARG, don't check for the signature.
	* docs/tutorial.texi (Chain-loading): Added a caution about some
	defective boot loaders and --force.
	* docs/user-ref.texi (Command-line-specific commands): Added a
	description about --force.
	
2000-01-11  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/prog-ref.texi (LBA mode disk I/O): Added a footnote about
	a buggy BIOS.
	
2000-01-11  OKUJI Yoshinori  <okuji@gnu.org>

	* stage1/stage1.S [!NO_BUGGY_BIOS_IN_THE_WORLD]: Don't check if
	LBA read is supported. Anyway, fallback to the CHS mode if
	fails.
	
2000-01-10  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/bios.c (NO_INT13_FALLBACK): Undefined.
	(get_diskinfo) [!NO_BUGGY_BIOS_IN_THE_WORLD]: Do not check if
	bit 0 in DRP.FLAGS is set, because at least one BIOS does not
	set it correctly. Reported by "Forever shall I be."
	<zinx@linuxfreak.com>.

	* util/grub-install.in: Handle the new options `--root' and
	`--grub-shell'.
	(rootdir): New variable.
	(usage): Print the help messages about the options --root and
	--grub-shell.
	(bootdir): Initialized after the option analysis.
	(grubdir): Likewise.
	(device_map): Likewise.
	(root_device): Set to the result for the directory ROOTDIR
	instead of "/".
	* docs/user-ref.texi (Invoking grub-install): Added the
	descriptions about --root and --grub-shell.
	* docs/grub-install.8: Regenerated.
	
2000-01-08  OKUJI Yoshinori  <okuji@gnu.org>

	* util/grub-install.in (grubdir_device): New variable.
	If GRUBDIR_DEVICE is not equal to ROOT_DEVICE, print an error
	message and exit.
	* README: Added a caution about Automake.
	* TODO: Updated. Only the things that should be done until 0.6
	have one or more exclamations. Things with zero exclamation
	will be done after 0.6 unless someone sends a patch for it.
	
2000-01-05  OKUJI Yoshinori  <okuji@gnu.org>

	* grub/asmstub.c: Include the header shared.h after including