@@ -14,7 +14,7 @@ print this message and exit
 \fB\-v\fR, \fB\-\-version\fR
 print the version information and exit
 .TP
-\fB\-\-root\fR=\fIDIR\fR
+\fB\-\-root\-directory\fR=\fIDIR\fR
 install GRUB images under the directory DIR
 instead of the root directory.
 .TP
